kubenetes/bitcoin-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bitcoin-app-deployment
  labels:
    app: bitcoin
spec:
  replicas: 3
  selector:
    matchLabels:
      app: bitcoin
  template:
    metadata:
      labels:
        app: bitcoin
    spec:
      containers:
        - name: bitcoin-monitor-container
          image: dvirdock/monitor-bitcoin:v4
          ports:
            - containerPort: 5000
          livenessProbe:
            httpGet:
              path: / 
              port: 5000
            initialDelaySeconds: 15 
            periodSeconds: 20       
            timeoutSeconds: 5  
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /
              port: 5000
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 3
