kubenetes/bitcoin-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bitcoin-service
spec:
  selector:
    app: bitcoin
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
